--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-router": "^7.11.0",
     "remix-themes": "^2.0.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.19.0",
@@ -63,6 +64,7 @@
     "typescript-eslint": "^8.50.0",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.16",
     "wrangler": "^4.56.0"
   },
   "pnpm": {
