feat & fix: Refactor UI, optimize components, and overhaul badge system
- Improved UI spacing for better mobile and desktop layouts.
- Unified copy/share actions into a new `OptionsMenu` component.
- Migrated assets to a curated badge system in `public/badges`.
- Optimized rendering in `MediaHeader` and fixed Tailwind lint issues.
- Removed legacy components and cleaned up unused assets.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,6 +11,7 @@
   "vars": {
     "VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare",
     "TURNSTILE_SITE_KEY": "0x4AAAAAACLSwN-VBqB6mZ1u",
+    "ENABLE_TURNSTILE": "false",
   },
   "observability": {
     "enabled": true,
