feat(workers+web): enable Turnstile submit-gate, harden analyzer path, and improve timeout UX/logging
- enforce Turnstile on analysis submit with popup flow and strict server-side validation
- remove direct analyze bypass and rely on web -> analyzer service binding path
- add analyzer auth/key plumbing and improve binding/env alignment for monorepo deploy
- improve upstream timeout handling, retries, and user-facing slow/retry status messages
- normalize page titles and app page spacing consistency
- strengthen logging/error classification for analysis failures and retries
- update DEV-README with monorepo deployment, secrets, local test keys, and verification steps

--- a/.gitignore
+++ b/.gitignore
@@ -19,19 +19,35 @@ dist/
 *.tsbuildinfo
 
 # React Router
-/.react-router/
+.react-router/
 
 # Cloudflare
 .mf
 .wrangler
+.wrangler/
 .dev.vars
 .dev.vars.*
+.dev.var
+.dev.var.*
 worker-configuration.d.ts
 
 # Environment Variables
 .env
 .env.*
 !.env.example
+.envrc
+.envrc.local
+.secrets
+.secrets.*
+
+# Key Material / Local Credentials
+*.key
+*.pem
+*.p12
+*.pfx
+*.pkcs12
+*.jks
+*.keystore
 
 # Editor
 .idea/
@@ -54,4 +70,3 @@ coverage/
 # Temporary
 temp/
 tmp/
-
