--- a/apps/analyzer/tsconfig.json
+++ b/apps/analyzer/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "extends": "@mediapeek/config-typescript/hono",
   "compilerOptions": {
-    "types": ["@cloudflare/workers-types", "vitest/globals", "vite/client"],
+    "types": [
+      "@cloudflare/workers-types",
+      "vitest/globals",
+      "vite/client",
+      "node"
+    ],
     "baseUrl": "./src",
     "paths": {
       "~/*": ["./*"]
